--- a/Memory Game/memory-game-styles.css
+++ b/Memory Game/memory-game-styles.css
@@ -44,3 +44,11 @@ h1 {
   background-color: rgb(211, 91, 211);
   border-color: white;
 }
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  height: 300px;
+  width: 400px;
+  align-items: center;
+}
